# Project_PersonaSinteticas

./: .env.example  .gitignore  BRAIN.md  README.md  Resultados ML.md  app.py  pyproject.toml
agent/: __init__.py  agents.py  config.py
data/: cluster_profiles.json  cluster_profiles_rfm.json
docs/: architecture.md  cluster_report.md  executive_presentation.md
engine/: __init__.py  clustering.py  persona_builder.py
knowledge/: PROBLEM_DESC.md
notebook/: galaxies_clustering.ipynb  galaxies_clustering_v2.ipynb
