[project]
name = "galaxies"
version = "0.1.0"
description = "Sistema multi-agente de segmentação de consumidores via clustering + personas conversacionais"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.45.0",
    "langchain>=0.3.0",
    "langgraph>=0.4.0",
    "langchain-openai>=0.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "python-dotenv>=1.1.0",
    "scipy>=1.14.0",
]
